Fix header on small screens

--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -45,7 +45,7 @@ header {
 
     a {
       color: #FFF;
-      width: 205px;
+      width: 210px;
       display: block;
 
       @include media(desktop) {
